src/test/deca/context/invalid/created/return/return_float_void.deca
// Description :
//    return mauvais type : void, demandé float
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (2.7) Type de retour effectif : void, déclaré : float

class A{
float met(){
}
}